<resources>
    <string name="app_name">ElectricCarApp</string>
    <string name="title">Electric Car</string>
    <string name="carros">Carros</string>
    <string name="favoritos">Favoritos</string>
    <string name="preco">Preço</string>
    <string name="bateria">Bateria</string>
    <string name="potencia">Potência</string>
    <string name="recarga">Recarga</string>
    <string name="preco_kwh">Preço Kwh</string>
    <string name="km_percorrido">Km Percorrido</string>
    <string name="calcular">Calcular</string>
    <string name="calcular_autonomia">Calcular Autonomia</string>
    <string-array name="array_cidades">
        <item>London</item>
        <item>Dublin</item>
        <item>Edinburgh</item>
        <item>Belfast</item>
    </string-array>
</resources>